# apps/api/src/modules/dashboard/dashboard.dto.ts
@@ -1,0 +1,9 @@
+import { ApiPropertyOptional } from '@nestjs/swagger';
+import { IsDateString, IsOptional } from 'class-validator';
+
+export class DashboardQuery {
+  @ApiPropertyOptional({ description: 'Fecha desde la última sincronización' })
+  @IsOptional()
+  @IsDateString()
+  since?: string;
+}
